feat: add new changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link nav-home" href="#">HOME</a>
+                        <a class="nav-link nav-home" href="./index.html">HOME</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./8/index.html">EXPLORE</a>
@@ -50,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">MY ACCOUNT</a>
                     </li>
-                    <img class="header-nav-language" src="./img/язык навбар.png" alt="">
+                    <img class="header-nav-language" src="./img/язык_навбар.png" alt="">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                     aria-expanded="false">EN</a>
@@ -76,8 +76,8 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up"
                 data-aos-duration="3000">
-                    <img class="header__img-under" src="./img/heager нижний img.png" alt="">
-                    <img class="header__img-above" src="./img/header верхний img.png" alt="">
+                    <img class="header__img-under" src="./img/header_img.png" alt="img">
+                    <img class="header__img-above" src="./img/heager_down_img.png" alt="img">
 
                 </div>
             </div>
@@ -305,7 +305,7 @@
 
 <!-- Initialize Swiper -->
 <script>
-  var swiper = new Swiper(".mySwiper", {
+  const swiper = new Swiper(".mySwiper", {
     slidesPerView: 1,
     spaceBetween: 30,
     loop: true,
